@@ -7,7 +7,8 @@ CHANGELOG for Fall of Eden
 
 Version 0.3q
 ------------
-* 
+* New patreon sponsored content by Jo Rhade:
+ - Equines win, ride stallion (requires pussy)
 
 --------------------------------------------
              PREVIOUS VERSIONS
